--- a/css/style.css
+++ b/css/style.css
@@ -327,7 +327,7 @@ body {
     display: inline-block;
 }
 
-.search__tabs-item--active {
+.search__tabs-item.tab--active {
     border-radius: 5px;
     background-color: #F0F0F4;
     font-weight: 700;
@@ -338,7 +338,7 @@ body {
     display: none;
 }
 
-.search__content-item--active {
+.search__content-item.tabs-content--active {
     display: block;
 }
 
