--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ p {
 
 body {
     color: #2F3035;
-   font-family: 'SFProDisplay-Regular', serif;
+    font-family: 'SFProDisplay-Regular', serif;
     font-size: 20px;
     line-height: 24px;
     font-weight: 400;
@@ -41,7 +41,7 @@ body {
 }
 
 .page-section {
-    margin-bottom: 80px;
+    margin: 80px 0;
 }
 
 .header__top-inner {
@@ -108,10 +108,10 @@ body {
     border-radius: 50%;
     text-align: center;
     line-height: 20px;
-    bottom: -15px;
-    right: -14px;
-
+    bottom: -7px;
+    right: -10px;
 }
+
 
 .header__bottom {
     margin-bottom: 80px;
@@ -330,15 +330,15 @@ body {
 .search__tabs-item.tab--active {
     border-radius: 5px;
     background-color: #F0F0F4;
-    font-weight: 700;
+    font-weight: 700; 
     font-family: 'SFProDisplay-Bold', sans-serif;
 }
 
-.search__content-item {
+.tabs-content {
     display: none;
 }
 
-.search__content-item.tabs-content--active {
+.tabs-content.tabs-content--active {
     display: block;
 }
 
@@ -445,3 +445,206 @@ body {
     content: url('../images/link-arrow.svg');
     padding-left: 2px;
 }
+
+.products a {
+    display: inline-block;
+}
+
+.product-item__wrapper {
+    position: relative;
+    width: 271px;
+    
+}
+
+.product-item {
+    min-height: 400px;
+    border: 1px solid #CDCDCD;
+    border-radius: 3px;
+    text-align: center;
+    padding: 52px 20px 31px;
+    width: 100%;
+    transition: all .3s;
+}
+
+.product-item__title {
+    font-weight: normal;
+    padding: 14px 0px 25px;
+}
+
+.product-item__favorite {
+    position:absolute;
+    top: 16px;
+    right: 19px;
+    width: 24px;
+    height: 22px;
+    background-color: transparent;
+    border: none;
+    outline: none;
+    z-index: 5;
+}
+
+.product-item__favorite::before {
+    content: '';
+    position: absolute;
+    width: 24px;
+    height: 22px;
+    top: 0;
+    left: 0;
+    background-image: url('../images/favorite.svg');
+}
+
+.product-item__favorite--active::before {
+    background-image: url('../images/favorite-active.svg');
+}
+
+
+.product-item__price {
+    font-family: Barlow, sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 30px;
+    line-height: 36px;  
+}
+
+.product-item__basket {
+    position: absolute;
+    width: 60px;
+    height: 40px;
+    background-color: #1C62CD;
+    border-radius: 10px 0px 0px 0px;
+    bottom: 0;
+    right: 0;
+    border: 0;
+  /*   padding-top: 7px; */
+
+}
+
+.product-item__basket::before {
+    content: "";
+    background-image: url('../images/basket-white.svg');
+    width: 30px;
+    height: 23px;
+    background-repeat: no-repeat;
+    top: 10px;
+    left: 14px;
+    position: absolute;
+}
+
+.product-item__hover-text {
+    padding: 18px 21px;
+    text-align: center;
+    background-color: rgba(255,255,255,0.9);
+    box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
+    border-radius: 3px;
+    display: inline-block;
+    position: absolute;
+    opacity: 0;
+    top:30%;
+    left: 50%;
+    transform: translateX(-50%);
+    white-space: nowrap;
+    overflow: hidden;
+    transition: all .3s;
+    color: #2F3035;
+
+}
+
+.product-item:hover .product-item__hover-text {
+    opacity: 1;
+    color: #2F3035;
+}
+
+.product-item:hover {
+    box-shadow: 3px 3px 20px rgba(50, 50, 50, 0.25);
+    color: #1C62CD;
+}
+
+.product-item:hover .product-item__notify-text {
+    color: #2F3035;
+}
+ 
+.product-item--sale::before {
+    content: 'SALE';
+    padding: 8px;
+    background-color: #1C62CD;
+    position: absolute;
+    left: 0;
+    top: 0;
+    color: #fff;
+    font-size: 12px;
+    line-height: 14px;
+    letter-spacing: 0.07em;
+}
+
+.product-item__wrapper.product-item__not-available .product-item__price {
+    display: none;
+}
+
+.product-item__notify-text {
+    display: none;
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 21px;
+    color: #2F3035;
+}
+
+.product-item__wrapper.product-item__not-available .product-item__notify-text {
+    display: block;
+}
+
+.product-item__wrapper.product-item__not-available .product-item__basket{
+    display: none;
+}
+
+a.product-item__notify-link {
+    display: none;
+}
+
+
+.product-item__wrapper.product-item__not-available .product-item__title {
+   padding-bottom: 13px;
+}
+
+.product-item__wrapper.product-item__not-available .product-item__notify-link {
+    display: block;
+    position: absolute;
+    bottom: 20px;
+    left: 0;
+    right: 0;
+    color: #1C62CD;
+    font-size: 16px;
+    line-height: 19px;
+    text-align: center;
+
+}
+
+.product-item__wrapper.product-item__not-available .product-item__notify-link span {
+    border-bottom: 1px solid #1C62CD;
+}
+
+.product__title {
+    font-family: 'Barlow', sans-serif;
+    font-style: normal;
+    font-weight: 900;
+    font-size: 25px;
+    line-height: 30px;
+    margin-bottom: 25px;
+}
+
+.products__tab + .products__tab {
+    margin-left: 50px;
+
+}
+
+.products__tabs {
+    margin-bottom: 25px;
+}
+
+.products__tab {
+    padding-bottom: 12px;
+}
+
+.products__tab.tab--active {
+    border-bottom: 2px solid #1C62CD;
+}
+
