--- a/css/style.css
+++ b/css/style.css
@@ -173,7 +173,8 @@ body {
     max-width: 870px;
 }
 
-.banner-section__slider-btn {
+.banner-section__slider-btn,
+.product-slider__slider-btn {
     position: absolute;
     top: 50%;
     transform: translate(-50%);
@@ -226,7 +227,7 @@ body {
     outline: none;
 }
 
-.slick-active button {
+.slick-active li button {
     background-color: #fff;
 }
 
@@ -648,3 +649,31 @@ a.product-item__notify-link {
     border-bottom: 2px solid #1C62CD;
 }
 
+.product-slider__slider-btnprev{
+    left: -20px;
+}
+
+.product-slider__slider-btnnext{
+    right: -20px;
+}
+
+.slick-slide img {
+    display: inline;
+}
+
+.product__more {
+    text-align: center;
+    margin: 35px 0 80px;
+}
+
+.product__item-link {
+    line-height: 18px;
+    font-size: 15px;
+    text-transform: uppercase;
+    /* identical to box height */
+
+    text-align: center;
+    letter-spacing: 0.12em;
+    padding: 16px 43px;
+    background-color:#F0F0F4;
+}
