--- a/css/style.css
+++ b/css/style.css
@@ -685,3 +685,97 @@ a.product-item__notify-link {
 .banner {
     margin-bottom: 80px;
 }
+
+.footer {
+    background-color: #F0F0F4;
+}
+
+.footer__bottom {
+    padding: 46px 0 22px;
+    display: flex;
+    justify-content: center;
+}
+
+.footer__bottom-link {
+    font-size: 10px;
+    line-height: 12px;
+    color: #48494D;
+    margin: 0 40px;
+}
+
+.footer__top {
+    padding-top: 43px;
+}
+
+.footer__top-inner {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer__top-newsletter.footer__top-item {
+    width: 295px;
+    margin-right: 50px;
+}
+
+.footer__top-title {
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 17px;
+}
+
+.footer-form {
+    margin-top: 34px;
+    display: flex;
+    justify-content: center;
+}
+
+.footer-form__input {
+    background-color: #fff;
+    border: none;
+    font-size: 14px;
+    line-height: 17px;
+    padding: 0 12px;
+
+}
+.footer-form__input::placeholder {
+    color: #C4C4C4;
+}
+
+.footer-form__btn {
+    text-transform: uppercase;
+    padding: 10px 16px;
+    border: none;
+    background-color: #1C62CD;
+    color: #fff;
+    font-weight: 600;
+    font-size: 11px;
+    line-height: 13px;
+    text-align: center;
+    letter-spacing: 0.12em;
+    font-family: 'SFProDisplay-Semibold';
+
+}
+
+.footer__top-item {
+    width: 200px;
+}
+
+.footer-list {
+    font-size: 14px;
+    line-height: 22px;
+}
+
+.footer__top-social.footer__top-item {
+    width: 250px;
+} 
+
+.social-list {
+    display: flex;
+    align-items: center;
+    height: 100%;
+
+}
+
+.social-list__item + .social-list__item {
+    margin-left: 30px;
+}
