--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@ p {
 
 body {
     color: #2F3035;
-    font-family: 'SFProDisplay-Regular', serif;
+    font-family: 'SFProDisplay-Regular';
     font-size: 20px;
     line-height: 24px;
     font-weight: 400;
@@ -806,4 +806,115 @@ a.product-item__notify-link {
 
 .breadcrumbs__list-item:last-child::after {
     display: none;
+}
+
+ .product-item {
+    display: inline-block;  /* for catalog page*/
+ } 
+
+ .product-item__img {
+    max-width: 100%;
+ }
+
+ .catalog {
+     margin-bottom: 100px;
+ }
+
+ .catalog__title {
+    font-family: 'SFProDisplay-Bold', serif;
+    font-size: 30px;
+    line-height: 36px;
+    margin-bottom: 26px;
+ }
+
+ .catalog__filter {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 50px;
+ }
+
+ .catalog__filter-items button {
+    font-size: 14px;
+    line-height: 17px;
+    opacity: 0.7;
+    background: #F0F0F4;
+    border-radius: 3px;
+    border: none;
+    padding: 5px 22px;
+    cursor: pointer;
+ }
+
+ .catalog__filter-items button + button {
+    margin-left: 8px;
+     
+ }
+
+ .catalog__filter-btn button {
+    background-color: transparent;
+    border: none;
+    cursor: pointer;
+    margin: 0;
+    padding: 0;
+}
+
+button.catalog__filter-btn button + button {
+    margin-left: 10px;
+}
+
+ button.catalog__filter-btngrid {
+
+ }
+
+ .catalog__filter-btnline {
+
+ }
+
+.catalog__inner {
+    display: flex;
+}
+
+.catalog__inner-aside {
+    min-width: 290px;
+    margin-right: 10px;
+}
+
+.catalog__inner-list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+
+}
+
+.product-item__wrapper {
+    margin-bottom: 30px;
+}
+
+.pagination {
+    width: 100%;
+    margin-top: 70px;
+}
+
+.pagination-list {
+    display: flex;
+    justify-content: center;
+}
+
+.pagination-list__item {
+    padding: 6px 12px; 
+    border: 2px solid transparent;
+    margin: 0 4px;
+    font-family: Barlow;
+    font-size: 18px;
+    line-height: 22px;
+    color: #C4C4C4;
+}
+
+.pagination-list__item.active {
+    
+    border: 2px solid #1C62CD;
+    color: #1C62CD;
+}
+
+.pagination-list__item a {
+
 }
