--- a/css/style.css
+++ b/css/style.css
@@ -454,8 +454,15 @@ body {
 .product-item__wrapper {
     position: relative;
     width: 271px;
+    margin-bottom: 30px;
+    transition: all .3s;
     
 }
+
+.product-item__wrapper--list {
+    width: 100%;
+}
+
 
 .product-item {
     min-height: 400px;
@@ -470,6 +477,9 @@ body {
 .product-item__title {
     font-weight: normal;
     padding: 14px 0px 25px;
+    font-size: 18px;
+    line-height: 21px;
+    text-align: center;
 }
 
 .product-item__favorite {
@@ -857,16 +867,42 @@ a.product-item__notify-link {
     padding: 0;
 }
 
-button.catalog__filter-btn button + button {
+.catalog__filter-btn {
+    display: flex;
+    align-items: center;
+}
+
+.catalog__filter-btn button + button {
     margin-left: 10px;
 }
 
  button.catalog__filter-btngrid {
-
+    width:26px;
+    height: 21px;
+    
+    
  }
 
- .catalog__filter-btnline {
+ button.catalog__filter-btnline {
+    width: 35px;
+    height: 19px;   
+ }
 
+ .catalog__filter-button {
+     opacity: 0.3;
+ }
+
+ .catalog__filter-button--active {
+     opacity: 1;
+ }
+
+
+ .select-item {
+    border: 1px solid #D7D9DF;
+    font-size: 14px;
+    line-height: 17px;
+    margin-right: 34px;
+    padding: 7px 10px 8px 20px;
  }
 
 .catalog__inner {
@@ -885,9 +921,6 @@ button.catalog__filter-btn button + button {
 
 }
 
-.product-item__wrapper {
-    margin-bottom: 30px;
-}
 
 .pagination {
     width: 100%;
@@ -943,4 +976,416 @@ button.catalog__filter-btn button + button {
     display: inline-block;
     border-bottom: 2px solid #1C62CD;
     padding-bottom: 7px;
+}
+
+.aside-filter__item-drop {
+    margin: 40px 0;
+}
+
+.aside-filter__item-title {
+    font-family: 'SFProDisplay-Semibold';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 19px;
+    padding-left: 26px;
+}
+
+.filter__item-drop {
+    position: relative;
+    cursor: pointer;
+}
+
+
+.filter__item-drop::before {
+    content: "";
+    background-image: url('../images/arrow-down.svg');
+    position: absolute;
+    left: 0px;
+    bottom:5px;
+    width:12px;
+    height: 8px;
+    transform: rotate(0deg);
+}
+
+.filter__item-drop--active::before {
+    transform: rotate(180deg);
+}
+
+.aside-filter__content {
+    display: flex;
+    flex-wrap: wrap;
+    margin-top: 10px;
+}
+
+.aside-filter__content-box {
+    width: 50%;
+    margin-bottom: 10px;
+}
+
+.aside-filter__content-label {
+    font-weight: normal;
+    font-size: 14px;
+    cursor: pointer;
+    line-height: 17px;
+}
+
+.jq-checkbox, .jq-radio {
+    background: #fff;
+    width: 14px;
+    height: 14px;
+    border: 1px solid #c4c4c4;
+    border-radius: 1px;
+    box-shadow: none;
+    vertical-align: -1px;
+    margin: 0 8px 0 0;
+
+}
+
+.jq-checkbox.checked, .jq-radio.checked {
+    background:#1C62CD;
+} 
+
+.jq-checkbox.checked .jq-checkbox__div {
+    width: 8px;
+    height: 6px;
+    margin: 3px 0 0 3px;
+    border-bottom: none;
+    border-left: none;
+    transform: rotate(0);
+    background-image: url('../images/checked-icon.svg');
+}
+ 
+.jq-radio.checked .jq-radio__div {
+    width: 10px;
+    height: 10px;
+    margin: 0;
+    border-radius: 0;
+    background: transparent;
+    box-shadow: none;
+
+}
+
+.aside-filter__content.aside-filter__content-radio {
+    flex-wrap: nowrap;
+}
+
+.irs--flat {
+    width: 100%;
+    margin-top: -15px;
+}
+
+.irs--flat .irs-from, .irs--flat .irs-to, .irs--flat .irs-single {
+    display: none;
+}
+
+
+.irs--flat .irs-min, .irs--flat .irs-max {
+    top: 55px;
+    text-shadow: none;
+    padding: 0;
+    background-color: transparent;
+    border-radius: 0;
+    font-family: 'Barlow', sans-serif;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 17px;
+    text-decoration-line: underline;
+    color: #2F3035;
+    visibility: visible !important;
+}
+
+
+.irs-min::before {
+    content:"from";
+}
+
+.irs-max::before {
+    content:"to";
+}
+
+
+
+.irs-min::before,
+.irs-max::before {
+    position: absolute;
+    font-family: 'SFProDisplay-Medium';
+    font-size: 14px;
+    line-height: 17px;
+    color: #C4C4C4;
+    text-decoration: none;
+    left: 0;
+}
+
+.irs--flat .irs-min {
+    padding-left: 34px;
+}
+
+.irs--flat .irs-max {
+    padding-left: 27px;
+}
+
+.irs--flat .irs-line {
+    top: 25px;
+    height: 1px;
+    background-color: #E0E0E0;
+    border-radius: 0;
+}
+
+.irs--flat .irs-bar {
+    top: 25px;
+    height: 3px;
+    background-color: #1C62CD;
+}
+
+.irs--flat .irs-handle {
+    top: 22px;
+    width: 8px;
+    height: 8px;
+    background-color: #1C62CD;
+    border-radius: 50%;
+}
+
+.irs--flat .irs-handle > i:first-child,
+.irs--flat .irs-handle.state_hover > i:first-child, .irs--flat .irs-handle:hover > i:first-child {
+    background-color: transparent;
+}
+
+.aside-filter__item-list {
+    margin: 46px 0 40px;
+}
+
+.filter__item-list {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 2px solid #C4C4C4;
+    padding-top: 34px;
+}
+
+.filter__item-listtitle {
+    font-family: 'SFProDisplay-Semibold';
+    padding-bottom: 14px;
+    font-weight: 600;
+    font-size: 16px;
+    line-height: 19px;  
+    padding-left: 26px;
+}
+
+.filter__item-listselect {
+    font-family: 'Barlow', sans-serif;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 17px;
+    color: #48494D;
+}
+
+.jq-selectbox__select {
+    font-family: 'Barlow', sans-serif;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 17px;
+    color: #48494D;
+
+    height: 20px;
+    padding: 0 px 0 10px;
+    border-radius: 0;
+    background: transparent;
+    box-shadow: none;
+    text-shadow: none;
+    border: none;
+}
+
+.jq-selectbox__trigger-arrow {
+    position: absolute;
+    top: 14px;
+    right: 12px;
+    width: 0;
+    height: 0;
+    border: none;
+}
+
+.jq-selectbox__trigger {
+    background-image: url('../images/arrow-down.svg');
+    top: 6px;
+    right: 9px;
+    width: 12px;
+    height: 8px;
+    border-left: none;
+}
+
+.jq-selectbox__select:hover, 
+.jq-selectbox__select:active {
+    background: transparent;
+    box-shadow: none;
+}
+
+.jq-selectbox.focused .jq-selectbox__select {
+    border: none;
+}
+
+.jq-selectbox li:hover {
+    background-color: rgba(107, 126, 172, 0.05);;
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.jq-selectbox li.selected {
+    background-color: rgba(107, 126, 172, 0.05);;
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.jq-selectbox li {
+    color: rgba(0, 0, 0, 0.6);
+}
+
+.jq-selectbox__dropdown {
+    border-radius: 0;
+    padding-top: 15px;
+}
+
+.filter-more {
+    width: 100%;
+}
+
+
+.filter-more__btn {
+    font-size: 14px;
+    line-height: 17px;
+    color: #1C62CD;
+    border: none;
+    border-bottom: 1px solid #1C62CD;
+    background-color: transparent;
+    padding: 0;
+    
+}
+
+.filter-search {
+    width: 100%;
+    border: 1px solid #E0E0E0;
+    height: 30px;
+    padding: 0 20px;
+    font-size: 12px;
+    line-height: 14px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.filter-search::placeholder {
+    color: #BDBEC2;
+
+}
+
+.btn-checked .aside-filter__content {
+    flex-wrap: nowrap;
+    justify-content: space-between;
+}
+
+.btn-checked .aside-filter__content-box {
+    width: auto;
+}
+
+.btn-checked .aside-filter__content-label {
+    position: relative;
+    height: 25px;
+    width: 63px;
+    font-size: 12px;
+    line-height: 14px;  
+    letter-spacing: 0.07em;
+    font-family: 'SFProDisplay-Bold';
+    font-weight: bold;
+    color: #BDBEC2;
+}
+
+.btn-checked .jq-checkbox {
+    height: 25px;
+    width: 63px;
+    
+    background: #F0F0F4;
+    
+    border: none;
+}
+
+.btn-checked .jq-checkbox.checked {
+    background: #1C62CD;
+}
+.btn-checked__text {
+    position: absolute;
+    top: -7px;
+    left: 50%;
+    transform: translateX(-57%);
+    z-index: 5;
+}
+
+.btn-checked .jq-checkbox.checked .jq-checkbox__div {
+    display: none;
+}
+
+.btn-checked .jq-checkbox.checked ~ .btn-checked__text {
+    color: #fff;
+}
+
+.filter-btn__send {
+    background: #F0F0F4;
+    padding: 16px 95px;
+    text-transform: uppercase;
+    font-size: 15px;
+    line-height: 18px;
+    letter-spacing: 0.12em;
+    color: #BDBEC2;
+    border: none;
+    cursor: pointer;
+    margin-bottom: 15px;
+
+}
+
+.filter-btn__send--active {
+    background: #1C62CD;
+    color: #fff;
+}
+
+.aside-filter__item-drop-btn {
+    text-align: center;
+}
+
+.filter__extra {
+    font-size: 13px;
+    line-height: 16px;
+    position: relative;
+    padding-right: 29px;
+    color: #2F3035;
+    cursor: pointer;
+    display: inline-block;
+    margin-bottom: 15px;
+    
+}
+
+.filter__extra::after {
+    content: "";
+    background-image: url('../images/arrow-down.svg');
+    position: absolute;
+    right: 0px;
+    top:4px;
+    width:12px;
+    height: 8px;
+    transform: rotate(0deg);
+}
+
+.filter__extra-content {
+    display: none;
+}
+
+.filter__extra.filter__item-drop--active::after {
+    transform: rotate(180deg);
+}
+
+.filter-btn__reset {
+    background-color: transparent;
+    padding: 0;
+    border: none;
+    display: inline-block;
+    font-size: 13px;
+    line-height: 16px;
+    text-decoration-line: underline;
+    color: #C4C4C4;
+    
 }
