--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,8 @@ body {
     font-size: 20px;
     line-height: 24px;
     font-weight: 400;
+    overflow-x: hidden;
+    min-width: 320px;
 }
 
 .container {
@@ -65,6 +67,10 @@ body {
 
 }
 
+.menu__btn {
+    display: none;
+}
+
 .header__address {
     margin-right: 60px;
     width: 265px;
@@ -79,6 +85,42 @@ body {
     height: 30px;
     left: 0;
     top: -10px;
+}
+
+.menu-mobile__list {
+    width: 243px;
+    position: absolute;
+    transform: translateX(-100%);
+    transition: all .3s;
+    z-index: 100;
+    background-color: #fff;
+}
+
+.menu-mobile__list--active {
+    transform: translateX(0);
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.15);
+}
+
+.menu-mobile__item {
+    position: relative;
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.menu-mobile__link {
+    
+    display: block;
+    padding-left: 53px;
+    padding-top: 36px;
+}
+
+.menu-mobile__img {
+    position: absolute;
+    left: 11px;
+    bottom:0;
+}
+
+.menu__mobile-linewrapper {
+    display: none;
 }
 
 .user-list {
@@ -108,8 +150,8 @@ body {
     border-radius: 50%;
     text-align: center;
     line-height: 20px;
-    bottom: -7px;
-    right: -10px;
+    bottom: -2px;
+    right: -13px;
 }
 
 
