--- a/css/media.css
+++ b/css/media.css
@@ -1,3 +1,22 @@
+@media (max-width: 1200px) {
+    .banner-section__slider-img {
+        min-height: 300px;
+        max-width: 600px;
+    }
+    .banner-section__inner {
+        justify-content: space-around;
+    }
+    .banner-section__slider {
+        max-width: 600px;
+    }
+    .slick-dots {
+        bottom: 120px;
+    }
+    .categories__inner {
+        justify-content: space-around;
+    }
+}
+
 @media (max-width: 1100px) {
     .menu__item + .menu__item {
         padding-left: 20px;
@@ -6,7 +25,6 @@
         margin-right: 20px;
     }
 }
-
 @media (max-width: 968px) {
     .header__bottom {
         display: none;
@@ -48,10 +66,95 @@
         
         width: 450px;
     }
+
+   .page-section {
+    margin-top: 0;
 }
+
+    .banner-section__inner {
+        margin-top: 25px;
+        flex-wrap: wrap;   
+        justify-content: center;
+    }
+
+    .banner-section__slider-item {
+        text-align: center;
+    }
+
+
+    .banner-section__slider {
+        max-width: 100%;
+    }
+
+    .banner-section__slider-img {
+        max-width: 100%;
+        margin-bottom: 25px;
+    }
+
+    .slick-dots {
+    bottom: 40px;
+    }
+
+    .mobile-overflow {
+        width: 1000px;
+    }
+
+    .tabs-wrapper {
+        overflow-x: scroll;
+    }
+
+}
+
+
 
 @media (max-width: 640px) {
     .header__address {
         display: none;
     }
+
+    .banner-section__slider-img {
+        min-height: 200px;
+    }
+
+    .banner-section .container {
+        padding: 0;
+    }
+
+    .search__content-btn {
+    font-size: 0;
+    line-height: 0;
+    padding: 17px;
+    background-image: url('../images/search.svg');
+    width: 24px;
+    height: 24px;
+    background-color: transparent;
+    background-repeat: no-repeat;
+    position: absolute;
+    right: 8px;
+    top: 13px;
+    }
+    .search__content-input {
+        height: 50px;
+        padding-right: 50px;
+    }
+
+    .search__content-form {
+        position: relative;
+        
+    }
+}
+
+
+@media (max-width: 440px) {
+
+    .banner-section__slider-img {
+        min-height: 164px;
+    }
+
+    .categories__item {
+        padding: 20px 10px 16px;
+    }
+
+
+
 }
