--- a/css/media.css
+++ b/css/media.css
@@ -25,6 +25,9 @@
     .banner-link img {
         width: 100%;
     }
+    .catalog__inner-list {
+        justify-content: space-around;
+    }
 }
 
 @media (max-width: 1100px) {
@@ -33,6 +36,9 @@
     }
     .header__address {
         margin-right: 20px;
+    }
+    .card__input-search {
+        margin-right: 0;
     }
 }
 @media (max-width: 968px) {
@@ -105,23 +111,76 @@
     bottom: 40px;
     }
 
-    .mobile-overflow {
+    .mobile-overflow
+     {
         width: 1000px;
     }
 
-    .tabs-wrapper {
+    .tabs-wrapper,
+    .breadcrumbs__inner,
+    .catalog__filter-item--inner {
         overflow-x: scroll;
     }
 
+    .tabs-wrapper.tabs-wrapper--no-scroll {
+        overflow: hidden;
+    }
+
+    .product-card__inner {
+        flex-wrap: wrap;
+    }
+
+    .product-card__tabs {
+        display: none;
+    }
+
+    .product-card__content {
+        order: -1;
+    }
+
+    .product-card__btn-mobile {
+        display: block;
+        margin-top: 40px;
+    }
+
+    .product-card__img-box {
+        width: 100%;
+    }
+
+    
+
+
 }
 
-@media (max-width: 640px) {
+@media (max-width: 940px) {
     .footer__top-inner {
         flex-wrap: wrap;
         justify-content: space-around;
     }
     .footer__top-item {
         margin-bottom: 25px;
+    }
+    .catalog__filter-btn button{
+        display: none;
+    }
+    .catalog__filter-btn {
+        margin-top: 30px;
+    }
+    .catalog__filter {
+        display: block;
+    }
+    .card__top-line label{
+        display: block;
+        width: 100%;
+        margin-bottom: 25px;
+        margin-left: 0;
+    }
+    .card__list-itemtitle {
+        display: none !important;
+    }
+    .card__list-item div{
+        display: block;
+        margin-bottom: 15px;
     }
 
 }
@@ -168,6 +227,38 @@
         min-height: 90px;
         object-fit: contain;
     }
+    .catalog__inner {
+        flex-wrap: wrap;
+    }
+
+    .aside__btn {
+        display: block;
+        text-transform: uppercase;
+        font-weight: 700;
+        text-align: center;
+        padding: 15px 0;
+        color: #fff;
+        width: 100%;
+        background-color: #1C62CD;
+        margin-bottom: 30px;
+    }
+    .aside-filter {
+        display: none;
+    }
+
+    .product-card__title {
+        font-size: 20px;
+        line-height: 24px;
+    }
+
+    .product-card__buttons a + a {
+        margin-left: 10px;
+    }
+
+    .product-card__img {
+        width: 100%;
+    }
+
 }
 
 @media (max-width: 540px) {
@@ -218,6 +309,7 @@
     }
     .footer__topdrop {
         position: relative;
+        pointer-events: auto;
     }
     .footer__topdrop::after {
         content: "";
@@ -233,7 +325,6 @@
         transform: rotate(180deg);
     }
 
-
 }
 
 
@@ -245,6 +336,9 @@
 
     .categories__item {
         padding: 20px 10px 16px;
+    }
+    .pagination-list__item {
+        margin: 0;
     }
 
 
