added content to index.html

--- a/css/style.css
+++ b/css/style.css
@@ -564,6 +564,12 @@ body {
     line-height: 36px;  
 }
 
+.margin-bottom__66 {
+    margin-bottom: 66px;
+}
+.margin-bottom__57 {
+    margin-bottom: 57px;
+}
 .product-item__basket {
     position: absolute;
     width: 60px;
