--- a/css/style.css
+++ b/css/style.css
@@ -1715,3 +1715,7 @@ a.product-item__notify-link {
 .footer__topdrop {
     pointer-events: none;
 }
+
+.jq-selectbox__select-text {
+    width: unset !important;
+}
